trunk/Archive2/ac/8e10483ed50419/output
a.cpp: In function 'int main()':
a.cpp:19:8: error: expected primary-expression before ';' token
     };-;
        ^
bash: line 9: ./a.out: No such file or directory
